  - Update the extractor of www.mdnkids.com to catchup with the website updates.

v0.40.0 2021-02-09T09:55:29+0900
  - Improve UDN extractor and let paragraphs be split correctly

v0.39.0 2020-08-23T22:19:18+0900
  - Improve the extraction of dateline of www.idn.com.tw
  - Add a site-specific extractor for www.bbc.com
  - Fix the format of extracted dateline of www.rti.org.tw

v0.38.0 2020-08-14T21:01:48+0800
  - Improve the accuracy of extraction of journalist and dateline on news.pts.gov.tw
  - Improve the recall of the extractor of news.tnn.tw
  - Add a site-specific extractor for www.aljazeera.com

v0.37.0 2020-08-08T13:11:45+0800
  - Add a site-specific extractor for www.penghutimes.com
  - dateline is reformatted differently. The time component is no longer default to 23:59:59

v0.36.0 2020-08-07T08:56:18+0800
  - Add a site-specific extractor for www.eventsinfocus.org
  - Add a site-specific extractor for m.news.cctv.com
  - Improve the extractor of newnet.tw

v0.35.0 2020-07-31T08:36:15+0800
  - re-format the dateline extracted from www.thinkingtaiwan.com
  - Handle a few special cases on chinatimes and ebc.
  - Improve the extraction of www.5ch.com.tw
  - Improve the recall of dateline and journalist on www.mdnkids.com

v0.34.0 2020-07-26T22:57:38+0800
  - Add a site-specific extractor for www.nownews.com
  - Add a site-specific extractor for www.mdnkids.com
  - Add a site-specific extractor for www.ustv.com.tw

v0.33.0 2020-07-22T06:44:18+0800
  - Improve the extraction of dateline and journalist for opinion.udn.com
  - Start parsing dateline string and refromat them as ISO8601

v0.32.0 2020-07-18T07:23:04+0800
  - Add a site-specific extractor for www.digitimes.com.tw
  - Add a site-specific extractor for www.hkcna.hk
  - Add a site-specific extractor for www.cw.com.tw
  - Handle the English version of www.hkcnews.com

v0.31.0 2020-07-14T08:57:12+0800
  - Add a site-specific extractor for newtalk.tw
  - Add a site-specific extractor for talk.ltn.com.tw
