@@ -1,3 +1,4 @@
+  - Update the extractor of ttv to catchup with the website updates.
   - Update the extractor of www.mdnkids.com to catchup with the website updates.
 
 v0.40.0 2021-02-09T09:55:29+0900
